# llama.cpp-server-tray

./: .gitignore  LICENSE  Makefile  README.md  llama.cpp-server-tray  llama.cpp-server-tray.desktop  llama.cpp-server-tray_new.py  llama.cpp-service-tray  pyproject.toml  test.py
contrib/: .nvchecker.toml  PKGBUILD
src/llama_cpp_server_tray/: server_tray.py
src/llama_cpp_server_tray/editor/: editor.py
